# gnome-system-tools

./: .cvsignore  AUTHORS  BUGS  ChangeLog  DISTROS  DirsMakefile  HACKING  ICONS  MAINTAINERS  Makefile.am  NEWS  README  RELEASE_CHECKLIST  SUPPORTED  TESTING  TODO  UI-GUIDELINES  acconfig.h  aclocal.m4  autogen.sh  configure.in  gnome-system-tools.doap  gnome-system-tools.pc.in  gnome-system-tools.schemas.in  gnome-system-tools.spec.in  helix-setup-tools.spec.in  message-of-doom  org.gnome.system-tools.gschema.xml  org.gnome.system-tools.gschema.xml.in  ximian-setup-tools.spec.in
doc/nameresolution/: Makefile.am  nameresolution-admin.sgml
doc/networking/: .cvsignore  Makefile.am  networking-admin.sgml
doc/services/: ChangeLog  Makefile.am
doc/shares/: ChangeLog  Makefile.am  shares-admin.sgml
doc/time/: ChangeLog  Makefile.am
interfaces/: .cvsignore  ChangeLog  Changelog  Makefile.am  alt_shares_mockup.glade  alt_shares_mockup.glade.inp  boot.glade  boot.glade.h  boot.glade.in  boot.glade.inp  boot_mockup.glade  boot_mockup.glade.inp  common.glade  common.glade.h  common.glade.in  common.glade.inp  common.ui  dhcpd.glade.h  dhcpd.glade.in  dhcpd.glade.inp  disks-mockup.glade  disks-mockup.glade.inp  disks.glade  disks.glade.h  disks.glade.in  disks.glade.inp  display-mockup.glade  display-mockup.glade.inp  display.glade.h  display.glade.in  display.glade.inp  fix.pl  font.glade.h  font.glade.in  font.glade.inp  hardware.glade.h  hardware.glade.in  hardware.glade.inp  internet_connection_druid.glade  internet_connection_druid.glade.h  (+69 more)
pixmaps/: 16_computer.xpm  16_ethernet.xpm  16_folder.xpm  16_group.xpm  16_loopback.xpm  16_penguin.xpm  16_user.xpm  16_user2.xpm  ChangeLog  Makefile.am  connection-active.xpm  connection-inactive.xpm
src/: Makefile.am
src/boot/: .cvsignore  ChangeLog  Makefile.am  boot-append-editor.c  boot-append-editor.h  boot-append-gui.c  boot-append-gui.h  boot-druid.c  boot-druid.h  boot-image-editor.c  boot-image-editor.h  boot-image.c  boot-image.h  boot-settings.c  boot-settings.h  boot.desktop.cc  boot.desktop.in  boot.desktop.in.in  boot.desktop.menu  boot.etspec  boot.pam  callbacks.c  callbacks.h  e-table.c  e-table.h  main.c  main.h  table.c  table.h  transfer.c  transfer.h
src/common/: .cvsignore  ChangeLog  CommonMakefile  Makefile.am  System.directory  System.directory.in  System.directory.in.in  checked.xpm  global.h  gst-auth.c  gst-auth.h  gst-conf.c  gst-conf.h  gst-dialog.c  gst-dialog.h  gst-filter.c  gst-filter.h  gst-hig-dialog.c  gst-hig-dialog.h  gst-marshal.h  gst-platform-dialog.c  gst-platform.c  gst-platform.h  gst-polkit-action.c  gst-polkit-action.h  gst-polkit-button.c  gst-polkit-button.h  gst-report-hook.c  gst-report-hook.h  gst-report-line.c  gst-report-line.h  gst-service-role.c  gst-service-role.h  gst-su.c  gst-su.h  gst-tool.c  gst-tool.h  gst-types.h  gst-ui.c  gst-ui.h  (+42 more)
src/disks/: .cvsignore  ChangeLog  Makefile.am  README  callbacks.c  callbacks.h  disks-cdrom-disc-audio.c  disks-cdrom-disc-audio.h  disks-cdrom-disc-data.c  disks-cdrom-disc-data.h  disks-cdrom-disc-dvd.c  disks-cdrom-disc-dvd.h  disks-cdrom-disc-mixed.c  disks-cdrom-disc-mixed.h  disks-cdrom-disc.c  disks-cdrom-disc.h  disks-config.c  disks-config.h  disks-factory-storage.c  disks-factory-storage.h  disks-gui.c  disks-gui.h  disks-mountable.c  disks-mountable.h  disks-partition.c  disks-partition.h  disks-storage-cdrom.c  disks-storage-cdrom.h  disks-storage-disk.c  disks-storage-disk.h  disks-storage-floppy.c  disks-storage-floppy.h  disks-storage-partition.c  disks-storage-partition.h  disks-storage.c  disks-storage.h  disks.c  disks.desktop.in.in  disks.h  gst-disks-tool.c  (+4 more)
src/network/: .cvsignore  ChangeLog  Makefile.am  TODO  address-list.c  address-list.h  callbacks.c  callbacks.h  connection.c  connection.h  dns.c  dns.h  essid-list.c  gst-network-tool.c  gst-network-tool.h  hosts.c  hosts.h  ifaces-list.c  ifaces-list.h  location.c  location.h  locations-combo.c  main.c  network-druid.c  network-druid.h  network-iface-ethernet.c  network-iface-ethernet.h  network-iface-irlan.c  network-iface-irlan.h  network-iface-isdn.c  network-iface-isdn.h  network-iface-modem.c  network-iface-modem.h  network-iface-plip.c  network-iface-plip.h  network-iface-wireless.c  network-iface-wireless.h  network-iface.c  network-iface.h  network-locations.c  (+13 more)
src/runlevel/: .cvsignore  ChangeLog  Makefile.am  callbacks.c  callbacks.h  main.c  runlevel.desktop.in.in  table.c  table.h  transfer.c  transfer.h
src/services/: .cvsignore  ChangeLog  Makefile.am  callbacks.c  callbacks.h  main.c  service-settings-table.c  service.c  service.h  services-tool.c  services-tool.h  services.desktop.in.in  table.c  table.h  transfer.c  transfer.h
src/shares/: .cvsignore  ChangeLog  Makefile.am  callbacks.c  callbacks.h  main.c  nfs-acl-table.c  nfs-acl-table.h  share-export-nfs.c  share-export-nfs.h  share-export-smb.c  share-export-smb.h  share-export.c  share-export.h  share-nfs-add-hosts.c  share-nfs-add-hosts.h  share-settings.c  share-settings.h  shares-tool.c  shares-tool.h  shares.desktop.in.in  table.c  table.h  transfer.c  transfer.h  users-table.c  users-table.h
src/time/: .cvsignore  ChangeLog  Makefile.am  main.c  ntp-servers-list.c  ntp-servers-list.h  time-tool.c  time-tool.h  time.desktop  time.desktop.in  time.desktop.in.in  time.pam  timeserv.c  timeserv.h  timezone.c  timezone.h  transfer.c  transfer.h  tz-map.c  tz-map.h  tz.c  tz.h  xst-spin-button.c  xst-spin-button.h
src/users/: .cvsignore  ChangeLog  Makefile.am  TODO  callbacks.c  callbacks.h  e-table.c  e-table.h  group-members-table.c  group-members-table.h  group-settings.c  group-settings.h  group.etspec  groups-table.c  groups-table.h  main.c  main.h  md5.c  md5.h  md5_crypt.c  net_group.etspec  net_user.etspec  network.c  network.h  passwd.c  passwd.h  privileges-table.c  privileges-table.h  profile-settings.c  profile-settings.h  profile.c  profile.h  profiles-table.c  profiles-table.h  profiles.etspec  run-passwd.c  run-passwd.h  table.c  table.h  test-battery.c  (+27 more)
(+255 files in other folders)
