AC_PREREQ(2.52)
AC_INIT(gnome-system-tools, 0.32.0, http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-system-tools)
AC_CONFIG_SRCDIR(src/common/gst-tool.c)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_PROG_INTLTOOL([0.29])

AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE
AC_PROG_INTLTOOL

GNOME_PLATFORM_GNOME_2(yes, force)

dnl Checking the above
AC_CONFIG_SRCDIR(src/common/gst-tool.c)

AM_PROG_LIBTOOL

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl glib-genmarshal
AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)

dnl =====================================================
dnl search for su
dnl =====================================================

AC_PATH_PROG(SU_TOOL, su)
if test x"${SU_TOOL}" = xno; then
  AC_MSG_ERROR([su executable not found in your path - should be installed])
else
  AC_DEFINE_UNQUOTED(SU_PATH, "${SU_TOOL}", [su executable path])
fi

dnl =====================================================
dnl END: search for su
dnl =====================================================

dnl =====================================================
dnl search for ssh
dnl =====================================================

AC_PATH_PROG(SSH_TOOL, ssh)
if test x"${SSH_TOOL}" = xno; then
  AC_MSG_WARN([ssh executable not found in your path - should be installed if remote administration is desired])
  AC_DEFINE_UNQUOTED(SSH_PATH, "", [ssh executable path])
else
  AC_DEFINE_UNQUOTED(SSH_PATH, "${SSH_TOOL}", [ssh executable path])
fi

dnl =====================================================
dnl END: search for ssh
dnl =====================================================

dnl =====================================================
dnl LibUtil checking
dnl =====================================================

AC_CHECK_LIB(util, forkpty, , [AC_MSG_ERROR(Libutil library ir required.)])
AC_CHECK_HEADER(pty.h, )

dnl =====================================================
dnl END: LibUtil checking
dnl =====================================================

dnl =====================================================
dnl Cracklib checking
dnl =====================================================

dnl AC_CHECK_LIB(crack, FascistCheck, ,[
dnl   AC_MSG_WARN()
dnl   AC_MSG_WARN(---------- Building without cracklib is not recommended. ----------)
dnl   AC_MSG_WARN()
dnl   AC_MSG_WARN(-- If you are looking for cracklib you can try  :)
dnl   AC_MSG_WARN(--    http://www.users.dircon.co.uk/~crypto/)
dnl   AC_MSG_WARN(--    or :)
dnl   AC_MSG_WARN(--    http://www.rpmfind.net/linux/rpm2html/search.php?query=cracklib)
dnl   AC_MSG_WARN(--    or :)
dnl   AC_MSG_WARN(--    apt-get install cracklib2-dev)
dnl   AC_MSG_WARN()])
dnl if test x"$HAVE_LIBCRACK" = xyes ; then
dnl   AC_CHECK_HEADER(crack.h, ,[
dnl   AC_MSG_ERROR(cracklib crack.h header file not found.)])
dnl fi

dnl GST_CRACK_LIB_LOCATION="/usr/lib/"
dnl AC_ARG_WITH(cracklib-dict,
dnl [  --with-cracklib-dict[=DIR]       specify a cracklib dir ],[
dnl   if test "$withval" != "no"; then
dnl     GST_CRACK_LIB_LOCATION=$withval
dnl   fi
dnl ])

AC_CHECK_LIB(crypt, crypt, ,[
   AC_MSG_ERROR(crypt library is required.)])
AC_CHECK_HEADER(crypt.h,AC_DEFINE(HAVE_CRYPT_H, "", [whether it has crypt function]))
dnl AC_SUBST(GST_CRACK_LIB_LOCATION)
dnl GST_CRACK_LIB_CFLAGS="-DGST_CRACK_LIB_DICT_PATH=\"\\\"\$(GST_CRACK_LIB_LOCATION)\\\"\""
dnl AC_SUBST(GST_CRACK_LIB_CFLAGS)

dnl =====================================================
dnl END: Cracklib checking
dnl =====================================================

dnl =====================================================
dnl Check for Module versions
dnl =====================================================

PKG_CHECK_MODULES(GST_DEPENDS,[
			   libgnomeui-2.0 >= 1.109.0
			   libglade-2.0 >= 1.99.5
			   libxml-2.0 >= 2.4.12
			   gconf-2.0 >= 2.2.0
			   ])

dnl =====================================================
dnl END: Check for Module versions
dnl =====================================================

dnl ========================================================
dnl Transtlations
dnl ========================================================

ALL_LINGUAS="am az bg ca cs da de el en_CA en_GB es et eu fr ga gl hr hu it ja ko lt lv mk ml mn ms nl nn no pl pt pt_BR ru sk sr sr@Latn sv tr uk vi wa zh_TW"
GETTEXT_PACKAGE=gnome-system-tools
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [gettext package name])
AM_GLIB_GNU_GETTEXT

# AM_GNOME_GETTEXT above substs $DATADIRNAME
# this is the directory where the *.{mo,gmo} files are installed
gnomelocaledir='${prefix}/${DATADIRNAME}/locale'
AC_SUBST(gnomelocaledir)

dnl ========================================================
dnl END : Translations
dnl ========================================================

dnl ========================================================
dnl Set SCRIPTS_DIR & PIXMAPS_DIR 
dnl ========================================================

if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(SCRIPTS_DIR, "${ac_default_prefix}/${DATADIRNAME}/setup-tool-backends/scripts", [path where scripts backend will be installed])
  scriptsdir="${ac_default_prefix}/${DATADIRNAME}/setup-tool-backends/scripts"
else
  AC_DEFINE_UNQUOTED(SCRIPTS_DIR,"${prefix}/${DATADIRNAME}/setup-tool-backends/scripts", [path where scripts backend will be installed])
  scriptsdir="${prefix}/${DATADIRNAME}/setup-tool-backends/scripts"
fi

if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(PIXMAPS_DIR, "${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/pixmaps", [pixmaps directory])
  pixmapsdir="${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/pixmaps"
  AC_DEFINE_UNQUOTED(INTERFACES_DIR, "${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/interfaces", [path where glade files will be installed])
  interfacesdir="${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/interfaces"
  AC_DEFINE_UNQUOTED(FRONTEND_DIR,"${ac_default_prefix}/${BINDIRNAME}", [frontend files path])
  AC_DEFINE_UNQUOTED(DESKTOP_DATA_DIR,"${ac_default_prefix}/${DATADIRNAME}/control-center-2.0/capplets", [capplets directory])
else
  AC_DEFINE_UNQUOTED(PIXMAPS_DIR, "${prefix}/${DATADIRNAME}/${PACKAGE}/pixmaps", [pixmaps directory])
  pixmapsdir="${prefix}/${DATADIRNAME}/${PACKAGE}/pixmaps"
  AC_DEFINE_UNQUOTED(INTERFACES_DIR, "${prefix}/${DATADIRNAME}/${PACKAGE}/interfaces", [path where glade files will be installed])
  interfacesdir="${prefix}/${DATADIRNAME}/${PACKAGE}/interfaces"
  AC_DEFINE_UNQUOTED(FRONTEND_DIR,"${prefix}/${BINDIRNAME}", [frontend files path])
  AC_DEFINE_UNQUOTED(DESKTOP_DATA_DIR,"${prefix}/${DATADIRNAME}/control-center-2.0/capplets", [capplets directory])
fi

AC_SUBST(scriptsdir)
AC_SUBST(pixmapsdir)
AC_SUBST(interfacesdir)

dnl ==============================================================
dnl END: Set SCRIPTS_DIR & PIXMAPS_DIR 
dnl ==============================================================

dnl =====================================================
dnl GCONF
dnl =====================================================

AC_PATH_PROG(GCONFTOOL, gconftool-2, no)

if test x"$GCONFTOOL" = xno; then
AC_MSG_ERROR([gconftool-2 executable not found in your path - should be installed with GConf])
fi
     
AM_GCONF_SOURCE_2

dnl =====================================================
dnl END: GCONF
dnl =====================================================
    
dnl =====================================================
dnl GST_LIBS & GST_CFLAGS 
dnl =====================================================

dnl GST_DEPRECATED_FLAGS="-DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED"
GST_DEPRECATED_FLAGS=""

GST_LIBS="$GST_DEPENDS_LIBS"
GST_CFLAGS="$GST_DEPENDS_CFLAGS $GST_CRACK_LIB_CFLAGS $GST_DEPRECATED_FLAGS"

GST_TOOL_LIBS="$GST_LIBS -lutil \$(top_builddir)/src/common/libsetuptool.a"
GST_TOOL_CFLAGS="$GST_CFLAGS -I\$(top_srcdir)/src/common"

GST_TOOL_CLEANFILES="\$(desktop) \$(desktop).in"
GST_TOOL_EXTRA_DIST="\$(toolpixmaps) \$(desktop).in.in" 
GST_TOOL_DEPENDENCIES="\$(top_builddir)/src/common/libsetuptool.a"

AC_SUBST(GST_LIBS)
AC_SUBST(GST_CFLAGS)
AC_SUBST(GST_TOOL_LIBS)
AC_SUBST(GST_TOOL_CFLAGS)
AC_SUBST(GST_TOOL_CLEANFILES)
AC_SUBST(GST_TOOL_EXTRA_DIST)
AC_SUBST(GST_TOOL_DEPENDENCIES)

dnl ==================================
dnl END: GST_LIBS & GST_FLAGS
dnl ==================================

dnl ===========================
dnl Configure the backends
dnl ==========================

AC_CONFIG_SUBDIRS(backends)

AC_OUTPUT([
Makefile
gnome-system-tools.spec
interfaces/Makefile
pixmaps/Makefile
src/Makefile
src/common/Makefile
src/users/Makefile
src/users/search-bar/Makefile
src/network/Makefile
src/time/Makefile
src/time/e-map/Makefile
src/boot/Makefile
src/services/Makefile
po/Makefile.in
gnome-system-tools.pc
])

dnl src/memory/Makefile 
dnl src/dhcpd/Makefile
dnl src/location-manager/Makefile
dnl src/internetsharing/Makefile
dnl src/font/Makefile
dnl doc/Makefile
dnl doc/nameresolution/Makefile
dnl doc/networking/Makefile
dnl doc/shares/Makefile
dnl -----------------
dnl src/disks/Makefile
dnl src/print/Makefile
dnl -----------------

echo "

Configuration (GST):
"
dnl	if test x${have_archiver} = xtrue; then echo "	Archiver support: yes"; else echo "	Archiver support: no"; fi
echo "	The scripts are expected at : ${scriptsdir}
	Compiler:		${CC} 
"

