pixmaps_DATA = \
	16_ethernet.xpm          \
	16_loopback.xpm          \
	16_ppp.xpm               \
	16_plip.xpm              \
	computer.png             \
	connection-ethernet.png  \
	connection-modem.png     \
	boot.png                 \
	debian.png               \
	fedora.png		 \
	freebsd.png              \
	gentoo.png               \
	irda-16.png              \
	irda-48.png              \
	mandrake.png             \
	nameresolution.png       \
	nameresolution_alias.png \
	nameresolution_id.png    \
	network.png              \
	openna.png               \
	pld.png                  \
	plip-48.png              \
	ppp.png                  \
	reading.png              \
	redhat.png               \
	server.png               \
	services.png		 \
	settings.png             \
	slackware.png            \
	suse.png                 \
	talk-userlist.png        \
	time.png                 \
	timezone.png             \
	turbolinux.png           \
	unsupported-distro.png   \
	users-groups.png         \
	users.png                \
	wavelan-16.png           \
	wavelan-48.png           \
	world_map-960.png 

EXTRA_DIST = $(pixmaps_DATA)
