pixmaps_DATA = \
	16_ethernet.xpm           \
	archlinux.png		  \
	black_panther.png         \
	conectiva.png		  \
	connection-ethernet.png   \
	connection-modem.png      \
	boot.png                  \
	debian.png                \
	disks.png		  \
	fedora.png		  \
	freebsd.png               \
	gentoo.png                \
	gnome-dev-cdrom-data.png  \
	gnome-dev-cdrom-mixed.png \
	irda-48.png               \
	mandrake.png              \
	openna.png                \
	pld.png                   \
	plip-48.png               \
	ppp.png                   \
	redhat.png                \
	slackware.png             \
	specifix.png              \
	suse.png                  \
	turbolinux.png            \
	vidalinux.png		  \
	vine.png                  \
	wavelan-48.png            \
	world_map-960.png 

EXTRA_DIST = $(pixmaps_DATA)
